<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="#dcdcdc"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.utn.juanignacio.utnecgv10.pacientMenuActivity"
    android:clickable="false">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="60dp">

        <Button
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_Add"
            android:id="@+id/btnAddPacient"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"
            android:drawableLeft="@android:drawable/ic_menu_add"
            android:background="@drawable/button_press" />

        <Button
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_Edit"
            android:id="@+id/btnFindPacient"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"
            android:drawableLeft="@android:drawable/ic_menu_edit"
            android:background="@drawable/button_press" />

        <Button
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_Delete"
            android:id="@+id/btnDeletePacient"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"
            android:drawableLeft="@android:drawable/ic_menu_delete"
            android:background="@drawable/button_press" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="60dp">

        <Button
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_Config"
            android:id="@+id/btnConfig"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_press"
            android:drawableLeft="@android:drawable/ic_menu_manage" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout3"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_Back"
            android:id="@+id/btnBack"
            android:background="@drawable/button_press"
            android:layout_gravity="center_horizontal"
            android:drawableLeft="@android:drawable/ic_menu_revert" />
    </LinearLayout>

</RelativeLayout>
